--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,15 @@ li{
 /* Banner */
 #banner{
     margin-top: -100px;
-    /* background-image: url(../images/banner1.jpg); */
+    
     background-size: cover;
     background-repeat: no-repeat;
     height: 80vh;
     
-    background: url('../images/download\ \(1\).jpg');
+    background:linear-gradient(to left, rgba(0, 0, 0, 0.37), rgba(85, 85, 85, 0.561)),
+    url('../images/download\ \(1\).jpg');
     background-position: center;
-    /* position: relative; */
+    
 }
 
 .main-heading{
