--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,25 @@
 /* #5C0931 */
 
+::-webkit-scrollbar {
+    width: 10px;
+    cursor: pointer;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(57, 57, 57);
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+
 *{
     margin: 0;
     padding: 0;
